# openenv-logistics

./: .dockerignore  .gitignore  Blog.md  Dockerfile  PROBLEM_STATEMENT.md  README.md  env.py  inference.py  inference_multi.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_local.py
agents/: __init__.py  bus.py  dispatcher.py  driver.py  llm.py
docs/: blog_post.md
docs/plots/: grader_eval_summary.json  grpo_reward_summary.json  rollout_summary.json
notebooks/: train_driver_trl.ipynb
scripts/: demo.sh
server/: __init__.py  app.py
training/: collect_and_plot.py  train_driver_sft.py
